unpackaged/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/GBS_Flow_Secondary_Category_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This setting represents the secondary category options that will be displayed to the end user in the GBS Flow which is housed in the Company Community. Depending on certains fields these different values will be displayed to the end user.</description>
    <label>GBS Flow Secondary Category Setting</label>
    <pluralLabel>GBS Flow Secondary Category Settings</pluralLabel>
</CustomObject>