unpackaged/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/fields/Access_Groups__c.field-meta.xml
<CustomField>
    <fullName>Access_Groups__c</fullName>
    <description>Access Group is a field on the user record. Access Groups defined in this field will be able to see specific values.</description>
    <inlineHelpText>User Access Groups should be separated with a comma(,)</inlineHelpText>
    <label>Access Groups</label>
    <length>255</length>
    <type>Text</type>
</CustomField>