unpackaged/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/fields/GBS_Centers__c.field-meta.xml
<CustomField>
    <fullName>GBS_Centers__c</fullName>
    <description>GBS Centers that that allow this picklist value to be displayed, must be separated by a comma (,)</description>
    <inlineHelpText>GBS Centers that that allow this picklist value to be displayed, must be separated by a comma (,)</inlineHelpText>
    <label>GBS Centers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>