unpackaged/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/fields/GBS_Flow_Picklist_Setting__c.field-meta.xml
<CustomField>
    <fullName>GBS_Flow_Picklist_Setting__c</fullName>
    <label>GBS Flow Picklist Setting</label>
    <referenceTo>GBS_Flow_Picklist_Setting__mdt</referenceTo>
    <relationshipLabel>GBS Flow Secondary Category Settings</relationshipLabel>
    <relationshipName>GBS_Flow_Secondary_Category_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>