unpackaged/main/default/objects/GBS_Flow_Secondary_Category_Setting__mdt/listViews/All_Details.listView-meta.xml
<ListView>
    <fullName>All_Details</fullName>
    <columns>MasterLabel</columns>
    <columns>GBS_Flow_Picklist_Setting__c</columns>
    <columns>GBS_Flow_Primary_Category_Setting__c</columns>
    <columns>Visible_to_VIP_User__c</columns>
    <columns>GBS_Centers__c</columns>
    <columns>Access_Groups__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Details</label>
    <language>en_US</language>
</ListView>